k8s/keycloak.yaml
# Original config at https://raw.githubusercontent.com/keycloak/keycloak-quickstarts/refs/heads/main/kubernetes/keycloak.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak
spec:
  type: NodePort
  ports:
    - port: 8180
      targetPort: 8080
  selector:
    app: keycloak
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: keycloak
  name: keycloak-discovery
spec:
  selector:
    app: keycloak
  clusterIP: None
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
spec:
  replicas: 1
  # Never run two Keycloak pods against the same database (schema migration lock)
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
        - name: keycloak
          image: ghcr.io/htl-leo-itp-25-27-4-5bhitm/partyhub-keycloak:latest
          imagePullPolicy: Always
          args: ["start", "--import-realm"]
          ports:
            - name: http
              containerPort: 8080
          resources:
            limits:
              cpu: 2000m
              memory: 2000Mi
            requests:
              cpu: 500m
              memory: 1700Mi
