k8s/quarkus.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quarkus
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  selector:
    matchLabels:
      app: quarkus
  template:
    metadata:
      labels:
        app: quarkus
    spec:
      containers:
        - name: quarkus
          image: ghcr.io/htl-leo-itp-25-27-4-5bhitm/partyhub-backend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: uploads
              mountPath: /app/uploads
      volumes:
        - name: uploads
          persistentVolumeClaim:
            claimName: profile-uploads-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: quarkus
spec:
  type: NodePort
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30801
  selector:
    app: quarkus
