k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: partyhub-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: it220274.cloud.htl-leonding.ac.at
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: quarkus
            port:
              number: 8080
      - path: /keycloak
        pathType: Prefix
        backend:
          service:
            name: keycloak
            port:
              number: 8080
