k8s/keycloak-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: it220274.cloud.htl-leonding.ac.at
    http:
      paths:
      - path: /realms
        pathType: Prefix
        backend:
          service:
            name: keycloak
            port:
              number: 8080
